# HT16K33-Mac

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  i2c.code-workspace
app/: CMakeLists.txt  ht16k33.c  ht16k33.h  i2cdriver.c  i2cdriver.h  main.c  main.h
common/: ht16k33.c  ht16k33.h  i2cdriver.c  i2cdriver.h
i2ccl/: CMakeLists.txt  main.c  main.h
matrix/: CMakeLists.txt  main.c  main.h
matrix.xcodeproj/: project.pbxproj
matrix.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
matrix.xcodeproj/project.xcworkspace/xcuserdata/smitty.xcuserdatad/: UserInterfaceState.xcuserstate
matrix.xcodeproj/xcuserdata/smitty.xcuserdatad/xcschemes/: xcschememanagement.plist
